--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ scipy>=0.15.1
 scikit-learn>=0.18
 matplotlib>=1.4.3
 pandas>=0.19
-xgboost>=1.4.1
-geopy>=2.2.0
+xgboost==1.4.1
+geopy==2.2.0
+json
 
